[gd_scene load_steps=8 format=3 uid="uid://8g8k8pt3o5fu"]

[ext_resource type="Script" path="res://Player/script/player.gd" id="1"]
[ext_resource type="Script" path="res://Player/script/woepon.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://c3id13u1kb7bw" path="res://Player/res/fonarik.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://d18r7x3jqehe5" path="res://Player/res/control.tscn" id="4"]

[sub_resource type="CapsuleShape3D" id="1"]

[sub_resource type="CapsuleMesh" id="2"]

[sub_resource type="CapsuleShape3D" id="3"]
height = 1.5

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1")

[node name="idlestat" type="CollisionShape3D" parent="."]
shape = SubResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="idlestat"]
mesh = SubResource("2")

[node name="RayCastCheck" type="RayCast3D" parent="idlestat"]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0.667534, 0)

[node name="RayCastDown" type="RayCast3D" parent="idlestat"]
transform = Transform3D(1, 0, 0, 0, 2.5872, 0, 0, 0, 1, 0, 1.0162, -0.00349498)

[node name="crouchstat" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)
shape = SubResource("3")
disabled = true

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="Camera3D" type="Camera3D" parent="neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.86102e-06, 0, -0.222092)

[node name="Marker3D" type="Marker3D" parent="neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -1.09278e-07, -1, 0, 2.5, -4.37114e-08, 0, 0, -1.95697)

[node name="RayCastIntaractive" type="RayCast3D" parent="neck/Camera3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, -1.09278e-07, -1, 0, 2.5, -4.37114e-08, 0, 0, 0)

[node name="woepon" type="Node3D" parent="neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.818707, -0.6, -0.467315)
script = ExtResource("2")
sway_left = Vector3(0, 0.1, 0)
sway_right = Vector3(0, -0.1, 0)

[node name="Fonarik" parent="neck/Camera3D/woepon" instance=ExtResource("3")]
transform = Transform3D(0.185, 0, 0, 0, 0.185, 0, 0, 0, 0.185, 0, 0, 0)

[node name="Control" parent="." instance=ExtResource("4")]

[node name="Label" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(604, 10.5)
horizontal_alignment = 1
